--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,8 @@
 env:
   es2021: true
   node: true
-extends: 'eslint:recommended'
+extends:
+  - airbnb-base
 parserOptions:
   ecmaVersion: 12
   sourceType: module
