--- a/.github/workflows/linter-and-tests.yml
+++ b/.github/workflows/linter-and-tests.yml
@@ -1,30 +1,15 @@
-name: linter-and-tests
-
-on:
-  - push
-  - pull_request
-
+name: linter
+on: push
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
-      - name: clone my repo
-        uses: actions/checkout@v2
-
-      - name: installation
-        run: make install
-
-      - name: run tests
-        run: make test
-
-      - name: run linter
-        run: make lint
-
-      - name: test & publish code coverage
-        uses: paambaati/codeclimate-action@v2.7.5
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.TEST_COVERAGE_CODE_CLIMATE_REPORTER_ID }}
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          coverageCommand: make test-coverage
-          debug: true
+          node-version: '14.x'
+      - run: make install
+      - run: make lint
+
+
