--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.0"
+    "eslint-plugin-import": "^2.24.0",
+    "html-webpack-plugin": "^5.3.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.0"
   }
 }
