--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,14 @@
-env:
-  es2021: true
-  node: true
-extends:
-  - airbnb-base
-parserOptions:
-  ecmaVersion: 12
-  sourceType: module
-rules:
-  no-console: 0
-  import/extensions: 0
+  env:
+    node: true
+    jest: true
+    browser: true
+
+  parser: "@babel/eslint-parser"
+
+  extends:
+    - "airbnb-base"
+    - "plugin:jest/recommended"
+
+  rules:
+    no-console: 0
+    import/extensions: 0
