--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RSS агрегатор",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --colors"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,13 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.0",
-    "html-webpack-plugin": "^5.3.2"
+    "html-webpack-plugin": "^4.5.2",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0"
   }
 }
