--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "html-webpack-plugin": "^4.5.2",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "yup": "^0.32.9"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
