--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
-    "bootstrap": "^5.1.0"
+    "bootstrap": "^5.1.0",
+    "on-change": "^4.0.0"
   }
 }
