--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
+    "copy-webpack-plugin": "^9.0.1",
     "on-change": "^4.0.0"
   }
 }
