--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "copy-webpack-plugin": "^9.0.1",
+    "i18next": "^20.6.1",
     "on-change": "^4.0.0"
   }
 }
