--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
     "html-webpack-plugin": "^4.5.2",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
