--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,21 @@
-  env:
-    node: true
-    jest: true
-    browser: true
+    ---
+    plugins:
+        - jest
 
-  parser: "@babel/eslint-parser"
+    env:
+        browser: true
+        node: true
+        es2020: true
 
-  extends:
-    - "airbnb-base"
-    - "plugin:jest/recommended"
+    extends:
+        - 'airbnb-base'
+        - 'plugin:jest/recommended'
 
-  rules:
-    no-console: 0
-    import/extensions: 0
+    parserOptions:
+        ecmaVersion: 11
+        sourceType: module
+
+    rules:
+        no-console: 0
+        import/extensions: 0
+        no-underscore-dangle: [ 2, { 'allow': [ '__filename', '__dirname' ] } ]
