--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,18 +1,8 @@
-    ---
-    env:
-        browser: true
-        node: true
-        es2020: true
-
-    extends:
-        - 'airbnb-base'
-        - 'plugin:jest/recommended'
-
-    parserOptions:
-        ecmaVersion: 11
-        sourceType: module
-
-    rules:
-        no-console: 0
-        import/extensions: 0
-        no-underscore-dangle: [ 2, { 'allow': [ '__filename', '__dirname' ] } ]
+env:
+  es2021: true
+  node: true
+extends: 'eslint:recommended'
+parserOptions:
+  ecmaVersion: 12
+  sourceType: module
+rules: {}
