--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
+  "eslintIgnore": ["hello.js", "dist/app.bundle.js"],
+
   "description": "RSS агрегатор",
   "main": "index.js",
   "scripts": {
