--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "eslintIgnore": ["**/dist/*.js"],
 
   "description": "RSS агрегатор",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest --colors"
   },
