--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "html-webpack-plugin": "^4.5.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2",
-    "yup": "^0.32.9"
+    "webpack-dev-server": "^3.11.2"
+
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
@@ -37,6 +37,7 @@
     "bootstrap": "^5.1.0",
     "copy-webpack-plugin": "^9.0.1",
     "i18next": "^20.6.1",
-    "on-change": "^4.0.0"
+    "on-change": "^4.0.0",
+    "yup": "^0.32.9"
   }
 }
