--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "eslintIgnore": ["**/dist/*.js"],
-
+  "eslintIgnore": [
+    "**/dist/*.js"
+  ],
   "description": "RSS агрегатор",
   "main": "src/index.js",
   "scripts": {
@@ -29,7 +30,6 @@
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
-
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
