--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-package",
+  "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/hexlet-boilerplates/webpack-package.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "Luce62006",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hexlet-boilerplates/webpack-package/issues"
