--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "@hexlet/code",
   "version": "0.1.0",
-  "description": "",
+  "description": "RSS reader",
+  "main": "src/init.js",
   "scripts": {
     "test": "jest --colors"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hexlet-boilerplates/webpack-package.git"
+    "url": "https://github.com/Luce62006/frontend-project-lvl3.git"
   },
   "author": "Luce62006",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hexlet-boilerplates/webpack-package/issues"
+    "url": "https://github.com/Luce62006/frontend-project-lvl3/issues"
   },
-  "homepage": "https://github.com/hexlet-boilerplates/webpack-package#readme",
+  "homepage": "https://frontend-project-lvl3-nu-wheat.vercel.app/",
   "jest": {
     "verbose": true,
     "testURL": "http://localhost/",
     "testEnvironment": "jsdom"
   },
-  "main": "../../Desktop/webpack-package-master/src/init.js",
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
