--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "@hexlet/code",
   "version": "0.1.0",
-  "description": "",
+  "description": "RSS reader",
+  "main": "src/init.js",
   "scripts": {
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Luce62006/frontend-project-lvl3.git"
+    "url": "https://github.com/Luce62006/frontend-project-lvl3.git"
   },
   "author": "Luce62006",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Luce62006/frontend-project-lvl3/issues"
   },
-  "homepage": "https://github.com/Luce62006/frontend-project-lvl3#readme",
+  "homepage": "https://frontend-project-lvl3-nu-wheat.vercel.app/",
   "jest": {
     "verbose": true,
     "testURL": "http://localhost/",
     "testEnvironment": "jsdom"
   },
-  "main": "src/init.js",
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "i18next": "^21.5.2",
     "lodash": "^4.17.21",
     "npm-check-updates": "^12.0.2",
