--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,17 +1,22 @@
+---
+root: true
+
+plugins:
+  - jest
+  - babel
+
 env:
-  es2021: true
   node: true
-  "browser": true
+  jest: true
+  browser: true
 
-extends: 'eslint:recommended'
-parserOptions:
-  ecmaVersion: 12
-  sourceType: module
+parser: "@babel/eslint-parser"
 
+extends:
+  - "airbnb-base"
+  - "plugin:jest/recommended"
 
 rules:
-  import/extensions: 0
-  import/no-unresolved: 0
-  no-param-reassign: 0
   no-console: 0
-  "no-unused-vars": 0
+  import/extensions: 0
+  no-param-reassign: 0
