--- a/package.json
+++ b/package.json
@@ -23,39 +23,40 @@
     "testEnvironment": "jsdom"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/eslint-parser": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
-    "babel-jest": "^27.1.1",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
-    "debug": "^4.3.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-env": "^7.16.4",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "debug": "^4.3.3",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.1.1",
-    "jest-cli": "^27.1.1",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "style-loader": "^3.2.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
+    "jest-cli": "^27.3.1",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.0.1",
+    "sass": "^1.43.5",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.5.2",
+    "i18next": "^21.5.3",
     "lodash": "^4.17.21",
     "npm-check-updates": "^12.0.2",
     "on-change": "^4.0.0",
-    "sass": "^1.39.0",
-    "sass-loader": "^12.1.0",
+    "onchange": "^7.1.0",
     "yup": "^0.32.11"
   }
 }
