--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "RSS reader",
   "main": "/src/init.js",
-  "scripts": {
+
+    "scripts": {
+      "start": "webpack serve",
+      "build": "NODE_ENV=production webpack",
     "test": "jest --colors",
     "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
