--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "description": "RSS reader",
   "main": "/src/init.js",
-
-    "scripts": {
-      "start": "webpack serve",
-      "build": "NODE_ENV=production webpack",
-    "test": "jest --colors",
-    "lint:fix": "eslint --fix --ext .js,.jsx ."
+  "scripts": {
+    "build": "NODE_ENV=production npx webpack"
   },
+    "test": "jest --colors",
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
   "repository": {
     "type": "git",
     "url": "https://github.com/Luce62006/frontend-project-lvl3.git"
