--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "RSS reader",
-  "main": "/src/init.js",
+  "main": "src/init.js",
   "scripts": {
     "build": "NODE_ENV=production npx webpack"
   },
