--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "RSS reader",
   "main": "./src/init.js",
   "scripts": {
-    "build": "NODE_ENV=production npx webpack"
-  },
+    "start": "webpack serve",
+    "build": "NODE_ENV=production webpack",
     "test": "jest --colors",
-    "lint:fix": "eslint --fix --ext .js,.jsx .",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Luce62006/frontend-project-lvl3.git"
