--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,6 +17,8 @@ extends:
   - "plugin:jest/recommended"
 
 rules:
-  no-console: 0
   import/extensions: 0
+  import/no-unresolved: 0
   no-param-reassign: 0
+  no-console: 0
+  "no-unused-vars": 0
