--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "RSS reader",
-  "main": "./src/init.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack serve",
     "build": "NODE_ENV=production webpack"
   },
-    "test": "jest --colors",
-    "lint:fix": "eslint --fix --ext .js,.jsx .",
-
+  "test": "jest --colors",
+  "lint:fix": "eslint --fix --ext .js,.jsx .",
   "repository": {
     "type": "git",
     "url": "https://github.com/Luce62006/frontend-project-lvl3.git"
