--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "RSS reader",
-  "main": "src/index.js",
+  "main": "./src/init.js",
   "scripts": {
     "start": "webpack serve",
     "build": "NODE_ENV=production webpack"
